[package]
name = "tp4"
version = "0.1.0"
edition = "2021"

[dependencies]
# parrallel looping
rayon = "1.10.0"

# random lib for mersenne twister
vrd = "0.0.8"

serde = { version = "1.0.215", features = ["derive"] }
ron = "0.8"
rand = "0.8.5"
serde-binary = "0.5.0"

# benchmark :
criterion = { version = "0.5", features = ["html_reports"] }